part 1 of the code. editing later today

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissors</title>
-    <script src="index.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
-  <p>h</p>  
+    <div class="flex-container"></div>
+    <h1>Rock Paper Scissors</h1>
 </body>
 </html>
